@@ -9,6 +9,7 @@ FILE		*abook_fopen (const char *path, const char *mode);
 void		quit_abook();
 void		launch_wwwbrowser(int item);
 void		launch_mutt(int item);
+void		print_stderr(int item);
 #ifdef _AIX
 int		strcasecmp (const char *, const char *);
 int		strncasecmp (const char *, const char *, size_t);
